// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package db

import (
	"net/netip"
	"time"

	"github.com/jackc/pgx/v5/pgtype"
)

type AppAiMessage struct {
	ID        string
	OrgID     string
	SessionID string
	Seq       int32
	Role      string
	Content   []byte
	CreatedAt time.Time
}

type AppAiSession struct {
	ID               string
	OrgID            string
	SiteID           string
	CreatedBy        string
	Status           string
	Model            string
	SandboxID        pgtype.Text
	SandboxExpiresAt pgtype.Timestamptz
	BaseVersionID    *string
	LatestVersionID  *string
	CreatedAt        time.Time
	LastActivityAt   time.Time
}

type AppAiUsage struct {
	ID                     string
	OrgID                  string
	SessionID              *string
	Model                  string
	OpenrouterGenerationID string
	PromptTokens           int64
	CompletionTokens       int64
	CostUsd                float64
	ReportedToBillingAt    pgtype.Timestamptz
	CreatedAt              time.Time
}

type AppAllowlistEntry struct {
	ID              string
	OrgID           string
	SiteID          string
	Email           string
	IsExternal      bool
	ClaimedAt       pgtype.Timestamptz
	ClaimedByUserID *string
	CreatedAt       time.Time
}

type AppAuditLog struct {
	ID         string
	OrgID      string
	ActorUser  *string
	ActorToken *string
	Action     string
	Target     pgtype.Text
	Metadata   []byte
	Ip         *netip.Addr
	RequestID  pgtype.Text
	TraceID    pgtype.Text
	CreatedAt  time.Time
}

type AppChatLog struct {
	ID               string
	OrgID            string
	SiteID           *string
	Title            string
	SourceTool       string
	PanelEnabled     bool
	NextSeq          int32
	CreatedBy        string
	CreatedAt        time.Time
	AllowMemberEdits bool
}

type AppChatMessage struct {
	ID        string
	OrgID     string
	ChatLogID string
	Seq       int32
	VersionID *string
	CreatedBy string
	Role      string
	Kind      string
	Content   string
	Meta      []byte
	CreatedAt time.Time
}

type AppDomain struct {
	ID           string
	OrgID        string
	SiteID       string
	Hostname     string
	VerifyStatus string
	TlsStatus    string
	CfHostnameID pgtype.Text
	DcvRecord    pgtype.Text
	CreatedAt    time.Time
}

type AppHostRoute struct {
	Host      string
	OrgID     string
	SiteID    string
	CreatedAt time.Time
	Kind      string
	VersionID *string
	ExpiresAt pgtype.Timestamptz
}

type AppOrgBlob struct {
	OrgID       string
	ContentHash string
	SizeBytes   int64
	CreatedAt   time.Time
}

type AppOrgMetum struct {
	ID                   string
	PlanTier             string
	AllowExternalSharing bool
	DefaultVisibility    string
	CreatedAt            time.Time
	OrgStatus            string
	McpEnabled           bool
	SkillsSeeded         bool
	AiEnabled            bool
	AiMonthlyCapUsd      float64
	ChatLogsEnabled      bool
}

type AppOrgUsage struct {
	OrgID        string
	MembersCount int32
	SitesCount   int32
	StorageBytes int64
	UpdatedAt    time.Time
}

type AppPostComment struct {
	ID               string
	OrgID            string
	SubjectType      string
	SubjectID        string
	AuthorUserID     string
	Body             string
	MentionedUserIds []string
	CreatedAt        time.Time
}

type AppPostVote struct {
	SubjectType string
	SubjectID   string
	OrgID       string
	UserID      string
	Value       int16
	CreatedAt   time.Time
	UpdatedAt   time.Time
}

type AppSite struct {
	ID               string
	OrgID            string
	Slug             string
	OwnerUserID      string
	AccessMode       string
	CurrentVersionID *string
	FeedVisible      bool
	Title            pgtype.Text
	Description      pgtype.Text
	CreatedAt        time.Time
	AllowMemberEdits bool
}

type AppSiteAccessPolicy struct {
	SiteID       string
	OrgID        string
	Mode         string
	PasswordHash pgtype.Text
	ExpiresAt    pgtype.Timestamptz
	Unlisted     bool
	UpdatedAt    time.Time
}

type AppSiteVersion struct {
	ID               string
	OrgID            string
	SiteID           string
	VersionNo        int32
	Status           string
	R2Prefix         string
	ContentHash      string
	SizeBytes        int64
	CreatedBy        string
	CreatedAt        time.Time
	CreatedVia       string
	PreviewExpiresAt pgtype.Timestamptz
}

type AppSkill struct {
	ID               string
	OrgID            string
	Slug             string
	OwnerUserID      string
	Title            pgtype.Text
	Description      pgtype.Text
	CurrentVersionID *string
	FeedVisible      bool
	CreatedAt        time.Time
	AllowMemberEdits bool
}

type AppSkillFolder struct {
	ID        string
	OrgID     string
	Slug      string
	Title     string
	CreatedAt time.Time
}

type AppSkillFolderItem struct {
	OrgID    string
	FolderID string
	SkillID  string
	IsPreset bool
	AddedBy  string
	AddedAt  time.Time
}

type AppSkillVersion struct {
	ID          string
	OrgID       string
	SkillID     string
	VersionNo   int32
	Status      string
	ContentHash string
	SizeBytes   int64
	CreatedBy   string
	CreatedAt   time.Time
}
